--- a/indedx.html
+++ b/indedx.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <h1>hi guys</h1>
  <h2>hlw bro</h2>  
  <h3>o Allah help me </h3>
+ <p>o amr khoda tayala <strong>Allah</strong> help koro amare ami jeno ei course ta valo moto korte pari</p>
 </body>
 </html>
