--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>hi guys</h1>
+ <h1>github.com</h1>
  <h2>hlw bro</h2>  
  <h3>hi kakka </h3>
  <p> ki khobor.<strong>Assalamualaikum</strong> basar sobai kemon ase</p>
