--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
  <h2>hlw bro</h2>  
  <h3>hi kakka </h3>
  <p> ki khobor.<strong>Assalamualaikum</strong> basar sobai kemon ase</p>
+ <img src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697" height="500px"width="1000px" alt="">
 </body>
 </html>
