--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <h2>hlw bro</h2>  
  <h3>hi kakka </h3>
  <p> ki khobor.<strong>Assalamualaikum</strong> basar sobai kemon ase</p>
+ <p>amar kase ei kaj gula korte onk moja lagtase ar kothin problem gula solved korte onk besi moja lagtase</p>
  <img src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697" height="500px"width="1000px" alt="">
 </body>
 </html>
